test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/incompatible_elem_type_static_compound_init.plx
#  invalid implicit conversion of double 1.0 to type int *
pub arr: [3]*i32 = $(0, 0, 1.0)

pub fn main(none) i32 {
    return 0
}
